# trendapp_mcp_server

./: .gitignore  README.md  client.py  draft,py  main.py  pyproject.toml  youtube.py
app/: settings.py  utils.py
app/const/: tags.py  url.py
app/crawlers/: __init__.py  base.py  huggingface.py  reddit.py  serp.py  youtube.py
app/llm/: __init__.py  base.py  deepseek.py  gemini.py
app/schemas/: posts.py  tools.py
app/tools/: tag_definition.py  tag_parser.py  tool_routers.py
